@@ -24,6 +24,7 @@ Other features
  * Add support for hierarchical/nested Collections (Robert Rollins)
  * Show user's full name in report views (Matt Westcott)
  * Improve Wagtail admin page load performance by caching SVG icons sprite in localstorage (Coen van der Kamp)
+ * Support SVG icons in ModelAdmin menu items (Scott Cranfill)
 
 
 Bug fixes
