@@ -9,10 +9,16 @@ class ModelAdminMenuItem(MenuItem):
     def __init__(self, model_admin, order):
         self.model_admin = model_admin
         url = model_admin.url_helper.index_url
-        classnames = 'icon icon-%s' % model_admin.get_menu_icon()
+        menu_icon = model_admin.get_menu_icon()
+        if menu_icon[:3] == 'fa-':
+            classnames = 'icon icon-%s' % menu_icon
+            icon_name = None
+        else:
+            classnames = ''
+            icon_name = menu_icon
         super().__init__(
             label=model_admin.get_menu_label(), url=url,
-            classnames=classnames, order=order)
+            classnames=classnames, icon_name=icon_name, order=order)
 
     def is_shown(self, request):
         return self.model_admin.permission_helper.user_can_list(request.user)
@@ -25,10 +31,16 @@ class GroupMenuItem(SubmenuMenuItem):
     pages
     """
     def __init__(self, modeladmingroup, order, menu):
-        classnames = 'icon icon-%s' % modeladmingroup.get_menu_icon()
+        menu_icon = modeladmingroup.get_menu_icon()
+        if menu_icon[:3] == 'fa-':
+            classnames = 'icon icon-%s' % menu_icon
+            icon_name = None
+        else:
+            classnames = ''
+            icon_name = menu_icon
         super().__init__(
             label=modeladmingroup.get_menu_label(), menu=menu,
-            classnames=classnames, order=order, )
+            classnames=classnames, icon_name=icon_name, order=order, )
 
     def is_shown(self, request):
         """
